05_Diplom/kuber/manifest/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  labels:
    name: stage
